--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'androidx.navigation.safeargs.kotlin'
 
 android {
     compileSdkVersion 29
@@ -37,8 +38,6 @@ android {
 
 
 dependencies {
-    def nav_version = "2.2.1"
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -53,8 +52,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigation_version"
 
 
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -62,11 +61,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
+
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.2'
 
-//    implementation 'io.reactivex.rxjava2:rxjava:2.2.18'
-//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-//    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.18'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.3.3'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
 }
