--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
     ext {
         kotlin_version = '1.3.61'
         navigation_version = '2.2.1'
+        paging_version = '2.1.1'
+        kotlin_coroutines_version = '1.3.3'
     }
 
     repositories {
