--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,5 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
 //    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.3.3'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
+    implementation 'androidx.paging:paging-runtime-ktx:2.1.1'
 }
