--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,20 @@
 buildscript {
 
     ext {
+        appcompat_version = '1.1.0'
+        constraintLayout_version = '1.1.3'
+        core_version = '1.2.0'
+        fragment_version = '1.2.2'
+        glide_version = '4.11.0'
+        gson_version = '2.8.6'
+        kotlin_coroutines_version = '1.3.3'
         kotlin_version = '1.3.61'
+        legacySupportV4_version = '1.0.0'
+        lifecycle_version = '2.2.0'
         navigation_version = '2.2.1'
         paging_version = '2.1.1'
-        kotlin_coroutines_version = '1.3.3'
+        recyclerview_version = '1.1.0'
+        retrofit_version = '2.7.1'
     }
 
     repositories {
